commit pour les npm install

--- a/fabcar/javascript/package.json
+++ b/fabcar/javascript/package.json
@@ -15,8 +15,10 @@
     "author": "Hyperledger",
     "license": "Apache-2.0",
     "dependencies": {
+        "express": "^4.16.4",
         "fabric-ca-client": "~1.4.0",
-        "fabric-network": "~1.4.0"
+        "fabric-network": "~1.4.0",
+        "morgan": "^1.9.1"
     },
     "devDependencies": {
         "chai": "^4.2.0",
