--- a/first-network/configtx.yaml
+++ b/first-network/configtx.yaml
@@ -268,6 +268,9 @@ Orderer: &OrdererDefaults
     # Organizations is the list of orgs which are defined as participants on
     # the orderer side of the network
     Organizations:
+            - *Org1
+            - *Org2
+            - *Org3
 
     # Policies defines the set of policies at this level of the config tree
     # For Orderer policies, their canonical path is
