--- a/first-network/fabric-ca-server-config.yaml
+++ b/first-network/fabric-ca-server-config.yaml
@@ -60,7 +60,7 @@ crlsizelimit: 512000
 #############################################################################
 tls:
   # Enable TLS (default: false)
-  enabled: false
+  enabled: true
   # TLS for the server's listening port
   certfile:
   keyfile:
