--- a/nip/javascript/package.json
+++ b/nip/javascript/package.json
@@ -20,11 +20,12 @@
         "fabric-ca-client": "~1.4.0",
         "fabric-network": "~1.4.0",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.24.0",
         "mongoose": "^5.4.19",
         "morgan": "^1.9.1",
         "object-hash": "^1.3.1",
-        "randomstring": "^1.1.5",
         "random-item": "^1.0.0",
+        "randomstring": "^1.1.5",
         "swagger-ui-express": "^4.0.2"
     },
     "devDependencies": {
