--- a/first-network/base/docker-compose-base.yaml
+++ b/first-network/base/docker-compose-base.yaml
@@ -7,8 +7,8 @@ version: '2'
 
 services:
 
-  orderer.example.com:
-    container_name: orderer.example.com
+  orderer.nip.ddns.net:
+    container_name: orderer.nip.ddns.net
     image: hyperledger/fabric-orderer:$IMAGE_TAG
     environment:
       - FABRIC_LOGGING_SPEC=INFO
@@ -28,129 +28,129 @@ services:
     command: orderer
     volumes:
     - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
-    - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
-    - ../crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/:/var/hyperledger/orderer/tls
-    - orderer.example.com:/var/hyperledger/production/orderer
+    - ../crypto-config/ordererOrganizations/nip.ddns.net/orderers/orderer.nip.ddns.net/msp:/var/hyperledger/orderer/msp
+    - ../crypto-config/ordererOrganizations/nip.ddns.net/orderers/orderer.nip.ddns.net/tls/:/var/hyperledger/orderer/tls
+    - orderer.nip.ddns.net:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
 
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
+  peer0.org1.nip.ddns.net:
+    container_name: peer0.org1.nip.ddns.net
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.org1.example.com
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
+      - CORE_PEER_ID=peer0.org1.nip.ddns.net
+      - CORE_PEER_ADDRESS=peer0.org1.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org1.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org1.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/org1.nip.ddns.net/peers/peer0.org1.nip.ddns.net/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org1.nip.ddns.net/peers/peer0.org1.nip.ddns.net/tls:/etc/hyperledger/fabric/tls
+        - peer0.org1.nip.ddns.net:/var/hyperledger/production
     ports:
       - 7051:7051
       - 7053:7053
 
-  peer1.org1.example.com:
-    container_name: peer1.org1.example.com
+  peer1.org1.nip.ddns.net:
+    container_name: peer1.org1.nip.ddns.net
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer1.org1.example.com
-      - CORE_PEER_ADDRESS=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051
+      - CORE_PEER_ID=peer1.org1.nip.ddns.net
+      - CORE_PEER_ADDRESS=peer1.org1.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org1.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org1.example.com/peers/peer1.org1.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org1.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/org1.nip.ddns.net/peers/peer1.org1.nip.ddns.net/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org1.nip.ddns.net/peers/peer1.org1.nip.ddns.net/tls:/etc/hyperledger/fabric/tls
+        - peer1.org1.nip.ddns.net:/var/hyperledger/production
 
     ports:
       - 8051:7051
       - 8053:7053
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
+  peer0.org2.nip.ddns.net:
+    container_name: peer0.org2.nip.ddns.net
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.org2.example.com
-      - CORE_PEER_ADDRESS=peer0.org2.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org2.example.com:7051
+      - CORE_PEER_ID=peer0.org2.nip.ddns.net
+      - CORE_PEER_ADDRESS=peer0.org2.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org2.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org2MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org2.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/org2.nip.ddns.net/peers/peer0.org2.nip.ddns.net/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org2.nip.ddns.net/peers/peer0.org2.nip.ddns.net/tls:/etc/hyperledger/fabric/tls
+        - peer0.org2.nip.ddns.net:/var/hyperledger/production
     ports:
       - 9051:7051
       - 9053:7053
 
-  peer1.org2.example.com:
-    container_name: peer1.org2.example.com
+  peer1.org2.nip.ddns.net:
+    container_name: peer1.org2.nip.ddns.net
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer1.org2.example.com
-      - CORE_PEER_ADDRESS=peer1.org2.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051
+      - CORE_PEER_ID=peer1.org2.nip.ddns.net
+      - CORE_PEER_ADDRESS=peer1.org2.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org2.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org2MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org2.example.com/peers/peer1.org2.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org2.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/org2.nip.ddns.net/peers/peer1.org2.nip.ddns.net/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org2.nip.ddns.net/peers/peer1.org2.nip.ddns.net/tls:/etc/hyperledger/fabric/tls
+        - peer1.org2.nip.ddns.net:/var/hyperledger/production
     ports:
       - 10051:7051
       - 10053:7053
 
-  peer0.org3.example.com:
-    container_name: peer0.org3.example.com
+  peer0.org3.nip.ddns.net:
+    container_name: peer0.org3.nip.ddns.net
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.org3.example.com
-      - CORE_PEER_ADDRESS=peer0.org3.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org3.example.com:7051
+      - CORE_PEER_ID=peer0.org3.nip.ddns.net
+      - CORE_PEER_ADDRESS=peer0.org3.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org3.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org3MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org3.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/org3.nip.ddns.net/peers/peer0.org3.nip.ddns.net/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org3.nip.ddns.net/peers/peer0.org3.nip.ddns.net/tls:/etc/hyperledger/fabric/tls
+        - peer0.org3.nip.ddns.net:/var/hyperledger/production
     ports:
       - 11051:7051
       - 11053:7053
 
-  peer1.org3.example.com:
-    container_name: peer1.org3.example.com
+  peer1.org3.nip.ddns.net:
+    container_name: peer1.org3.nip.ddns.net
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer1.org3.example.com
-      - CORE_PEER_ADDRESS=peer1.org3.example.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051
+      - CORE_PEER_ID=peer1.org3.nip.ddns.net
+      - CORE_PEER_ADDRESS=peer1.org3.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org3.nip.ddns.net:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org3MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/org3.example.com/peers/peer1.org3.example.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/org3.example.com/peers/peer1.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org3.example.com:/var/hyperledger/production
+        - ../crypto-config/peerOrganizations/org3.nip.ddns.net/peers/peer1.org3.nip.ddns.net/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/org3.nip.ddns.net/peers/peer1.org3.nip.ddns.net/tls:/etc/hyperledger/fabric/tls
+        - peer1.org3.nip.ddns.net:/var/hyperledger/production
     ports:
       - 12051:7051
       - 12053:7053
