--- a/first-network/docker-compose-cli.yaml
+++ b/first-network/docker-compose-cli.yaml
@@ -6,72 +6,72 @@
 version: '2'
 
 volumes:
-  orderer.example.com:
-  peer0.org1.example.com:
-  peer1.org1.example.com:
-  peer0.org2.example.com:
-  peer1.org2.example.com:
-  peer0.org3.example.com:
-  peer1.org3.example.com:
+  orderer.nip.ddns.net:
+  peer0.org1.nip.ddns.net:
+  peer1.org1.nip.ddns.net:
+  peer0.org2.nip.ddns.net:
+  peer1.org2.nip.ddns.net:
+  peer0.org3.nip.ddns.net:
+  peer1.org3.nip.ddns.net:
 
 networks:
   byfn:
 
 services:
 
-  orderer.example.com:
+  orderer.nip.ddns.net:
     extends:
       file:   base/docker-compose-base.yaml
-      service: orderer.example.com
-    container_name: orderer.example.com
+      service: orderer.nip.ddns.net
+    container_name: orderer.nip.ddns.net
     networks:
       - byfn
 
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
+  peer0.org1.nip.ddns.net:
+    container_name: peer0.org1.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer0.org1.example.com
+      service: peer0.org1.nip.ddns.net
     networks:
       - byfn
 
-  peer1.org1.example.com:
-    container_name: peer1.org1.example.com
+  peer1.org1.nip.ddns.net:
+    container_name: peer1.org1.nip.ddns.net
     extends:
       file: base/docker-compose-base.yaml
-      service: peer1.org1.example.com
+      service: peer1.org1.nip.ddns.net
     networks:
       - byfn
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
+  peer0.org2.nip.ddns.net:
+    container_name: peer0.org2.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer0.org2.example.com
+      service: peer0.org2.nip.ddns.net
     networks:
       - byfn
 
-  peer1.org2.example.com:
-    container_name: peer1.org2.example.com
+  peer1.org2.nip.ddns.net:
+    container_name: peer1.org2.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer1.org2.example.com
-    networks:
-      - byfn
-  
-  peer0.org3.example.com:
-    container_name: peer0.org3.example.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer0.org3.example.com
+      service: peer1.org2.nip.ddns.net
     networks:
       - byfn
 
-  peer1.org3.example.com:
-    container_name: peer1.org3.example.com
+  peer0.org3.nip.ddns.net:
+    container_name: peer0.org3.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer1.org3.example.com
+      service: peer0.org3.nip.ddns.net
+    networks:
+      - byfn
+
+  peer1.org3.nip.ddns.net:
+    container_name: peer1.org3.nip.ddns.net
+    extends:
+      file:  base/docker-compose-base.yaml
+      service: peer1.org3.nip.ddns.net
     networks:
       - byfn
 
@@ -86,13 +86,13 @@ services:
       #- FABRIC_LOGGING_SPEC=DEBUG
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_PEER_ID=cli
-      - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
+      - CORE_PEER_ADDRESS=peer0.org1.nip.ddns.net:7051
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.nip.ddns.net/peers/peer0.org1.nip.ddns.net/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.nip.ddns.net/peers/peer0.org1.nip.ddns.net/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.nip.ddns.net/peers/peer0.org1.nip.ddns.net/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.nip.ddns.net/users/Admin@org1.nip.ddns.net/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
@@ -102,13 +102,13 @@ services:
         - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
         - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     depends_on:
-      - orderer.example.com
-      - peer0.org1.example.com
-      - peer1.org1.example.com
-      - peer0.org2.example.com
-      - peer1.org2.example.com
-      - peer0.org3.example.com
-      - peer1.org3.example.com
+      - orderer.nip.ddns.net
+      - peer0.org1.nip.ddns.net
+      - peer1.org1.nip.ddns.net
+      - peer0.org2.nip.ddns.net
+      - peer1.org2.nip.ddns.net
+      - peer0.org3.nip.ddns.net
+      - peer1.org3.nip.ddns.net
 
     networks:
       - byfn
