--- a/first-network/docker-compose-e2e-template.yaml
+++ b/first-network/docker-compose-e2e-template.yaml
@@ -6,13 +6,13 @@
 version: '2'
 
 volumes:
-  orderer.example.com:
-  peer0.org1.example.com:
-  peer1.org1.example.com:
-  peer0.org2.example.com:
-  peer1.org2.example.com:
-  peer0.org3.example.com:
-  peer1.org3.example.com:
+  orderer.nip.ddns.net:
+  peer0.org1.nip.ddns.net:
+  peer1.org1.nip.ddns.net:
+  peer0.org2.nip.ddns.net:
+  peer1.org2.nip.ddns.net:
+  peer0.org3.nip.ddns.net:
+  peer1.org3.nip.ddns.net:
 
 networks:
   byfn:
@@ -23,13 +23,13 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org1
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.nip.ddns.net-cert.pem
       - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/CA1_PRIVATE_KEY
     ports:
       - "7054:7054"
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/CA1_PRIVATE_KEY -b admin:adminpw -d --config /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml'
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org1.nip.ddns.net-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/CA1_PRIVATE_KEY -b admin:adminpw -d --config /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml'
     volumes:
-      - ./crypto-config/peerOrganizations/org1.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
+      - ./crypto-config/peerOrganizations/org1.nip.ddns.net/ca/:/etc/hyperledger/fabric-ca-server-config
       - ./fabric-ca-server-config.yaml:/etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml
     container_name: ca_peerOrg1
     networks:
@@ -41,13 +41,13 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org2
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.nip.ddns.net-cert.pem
       - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/CA2_PRIVATE_KEY
     ports:
       - "8054:7054"
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/CA2_PRIVATE_KEY -b admin:adminpw -d --config /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml'
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org2.nip.ddns.net-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/CA2_PRIVATE_KEY -b admin:adminpw -d --config /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml'
     volumes:
-      - ./crypto-config/peerOrganizations/org2.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
+      - ./crypto-config/peerOrganizations/org2.nip.ddns.net/ca/:/etc/hyperledger/fabric-ca-server-config
       - ./fabric-ca-server-config.yaml:/etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml
     container_name: ca_peerOrg2
     networks:
@@ -59,70 +59,70 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org3
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org3.example.com-cert.pem
+      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org3.nip.ddns.net-cert.pem
       - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/CA3_PRIVATE_KEY
     ports:
       - "9054:7054"
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org3.example.com-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/CA3_PRIVATE_KEY -b admin:adminpw -d --config /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml'
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.org3.nip.ddns.net-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/CA3_PRIVATE_KEY -b admin:adminpw -d --config /etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml'
     volumes:
-      - ./crypto-config/peerOrganizations/org3.example.com/ca/:/etc/hyperledger/fabric-ca-server-config
+      - ./crypto-config/peerOrganizations/org3.nip.ddns.net/ca/:/etc/hyperledger/fabric-ca-server-config
       - ./fabric-ca-server-config.yaml:/etc/hyperledger/fabric-ca-server/fabric-ca-server-config.yaml
     container_name: ca_peerOrg3
     networks:
       - byfn
 
-  orderer.example.com:
+  orderer.nip.ddns.net:
     extends:
       file:   base/docker-compose-base.yaml
-      service: orderer.example.com
-    container_name: orderer.example.com
+      service: orderer.nip.ddns.net
+    container_name: orderer.nip.ddns.net
     networks:
       - byfn
 
-  peer0.org1.example.com:
-    container_name: peer0.org1.example.com
+  peer0.org1.nip.ddns.net:
+    container_name: peer0.org1.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer0.org1.example.com
+      service: peer0.org1.nip.ddns.net
     networks:
       - byfn
 
-  peer1.org1.example.com:
-    container_name: peer1.org1.example.com
+  peer1.org1.nip.ddns.net:
+    container_name: peer1.org1.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer1.org1.example.com
+      service: peer1.org1.nip.ddns.net
     networks:
       - byfn
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
+  peer0.org2.nip.ddns.net:
+    container_name: peer0.org2.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer0.org2.example.com
+      service: peer0.org2.nip.ddns.net
     networks:
       - byfn
 
-  peer1.org2.example.com:
-    container_name: peer1.org2.example.com
+  peer1.org2.nip.ddns.net:
+    container_name: peer1.org2.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer1.org2.example.com
+      service: peer1.org2.nip.ddns.net
     networks:
       - byfn
 
-  peer0.org3.example.com:
-    container_name: peer0.org3.example.com
+  peer0.org3.nip.ddns.net:
+    container_name: peer0.org3.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer0.org3.example.com
+      service: peer0.org3.nip.ddns.net
     networks:
       - byfn
 
-  peer1.org3.example.com:
-    container_name: peer1.org3.example.com
+  peer1.org3.nip.ddns.net:
+    container_name: peer1.org3.nip.ddns.net
     extends:
       file:  base/docker-compose-base.yaml
-      service: peer1.org3.example.com
+      service: peer1.org3.nip.ddns.net
     networks:
       - byfn
